<resources>
    <string name="app_name">Take Care</string>
    <string name="text_not_member">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="cpw">Confirm password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="register">Create a new account</string>
    <string name="sp">Show password</string>
    <string name="fp">Forgot password?</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="cn">Phone number ex. 9283832770</string>
    <string name="member">Already have an existing account?</string>
    <string name="error_message_username">Wrong Username or Password</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>
    <string name="error_message_email">Enter username</string>
    <string name="error_message_password">Enter password</string>
    <string name="success_message">Registered successfully</string>
    <string name="error_email_exists">Username already exists</string>
    <string name="error_valid_email">Username does not exists</string>
    <string name="error_message_name">Enter name</string>
    <string name="error_password_match">Password did not match</string>
    <string name="error_message_contact">Enter contact number</string>
    <string name="error_valid_email_password">Wrong email or password</string>

    <string name="input_error_firstname">First name required</string>
    <string name="input_error_lastname">Last name required</string>
    <string name="input_error_email">Email required</string>
    <string name="input_error_password">Password required</string>
    <string name="input_error_confirmpassword">Password don\'t match</string>
    <string name="input_error_phone">Phone number required</string>
    <string name="input_error_password_length">Password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">Enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">Enter a valid email</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_health_tips">Health Tips</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_medical_terms">Medical Terminology</string>
    <string name="title_activity_common_disease">Common Disease</string>
    <string name="title_activity_medicine">Medicine</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_on_click_med_terms">OnClickMedTermsActivity</string>
    <string name="title_activity_click_med_term">ClickMedTermActivity</string>
    <string name="title_activity_add_medical_history">Add Medical History</string>
    <string name="title_activity_medical_history">Medical History</string>
    <string name="title_activity_med_history_detail">Medical History</string>
    <string name="title_activity_way_doc">WAY Doc</string>
    <string name="title_activity_practo">WAY Doc</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_sub_profile">Sub-Profile</string>
    <string name="title_activity_edit_sub_profile">Sub-Profile</string>

    <string name="herbal">Herbal</string>
    <string name="branded">Branded</string>
    <string name="generic">Generic</string>

    <string name="about">TAKE CARE was developed by (4) students of Bachelor of Science in Information Technology from Cavite State University, Don Severino Delas Alas Campus  Indang, Cavite in partial fulfilment for their course. They were name READ. Stands for: Christine Marie S. (R)ivadeniera, Dencel (E)ncinas, Cristhea D. (A)placador, Johnica Claire R. (D)e Ocampo. The application was developed since 2018. </string>
    <string name="medText">Here are the features of TAKE CARE: Medical Dictionary provides information about a medicine, medical terminologies and diseases.</string>
    <string name="healthText">Health Tips displays healthy tips.</string>
    <string name="docText">W.A.Y.Doc that allows the users to find and choose a Doctor that will match the user according to their condition,</string>
    <string name="remText">MEDuler will let the user to schedule their medication intake to remind them consistently</string>
    <string name="text">TAKE CARE will help the users regarding to their health care especially to people needed to remind them. This mobile application will help users to manage their medication with the help only with this medication management application. The users can explore many features with this application. It will benefit people who are health conscious including the people to take who often forget to take care of themselves. The application will suggest doctors regarding to what the users searched.</string>

    <string name="delete_dialog_msg">Delete this Medical History?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
