<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:title="@string/about"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">
            <!--app:title="@string/about"-->

            <ImageView
                android:layout_marginTop="55dp"
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/bgabout"
                android:scaleType="centerCrop"
                />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <!--  <android.support.design.widget.FloatingActionButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/photo"
          app:layout_anchor="@id/appBarLayout"
          app:layout_anchorGravity="bottom|left|end"
          android:layout_marginStart="32dp"
          android:layout_marginLeft="32dp"

          />
  -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="8sp"
                    android:padding="16dp"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="8sp"
                    android:padding="16dp"
                    android:text="@string/medText"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="8sp"
                    android:padding="16dp"
                    android:text="@string/docText"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="8sp"
                    android:padding="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/remText"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightblack"
                        android:layout_margin="10dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center_horizontal"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/id1"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="1dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/id2"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="1dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/id3"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="1dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/id4"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="1dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:layout_marginBottom="20dp"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="8sp"
                        android:padding="16dp"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>